--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "morgan": "^1.10.0",
-    "serve-favicon": "^2.5.0",
-    "uuid": "^9.0.1"
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
